added and integrated solana wallet

--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
 		"@radix-ui/react-switch": "^1.0.3",
 		"@radix-ui/react-toast": "^1.1.5",
 		"@reduxjs/toolkit": "^2.2.2",
+		"@solana/wallet-adapter-base": "^0.9.23",
+		"@solana/wallet-adapter-react": "^0.15.35",
+		"@solana/wallet-adapter-react-ui": "^0.9.35",
+		"@solana/wallet-adapter-wallets": "^0.19.32",
+		"@solana/web3.js": "^1.95.3",
 		"@tailwindcss/typography": "^0.5.13",
 		"axios": "^1.6.8",
 		"class-variance-authority": "^0.7.0",
