--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@radix-ui/react-label": "^2.0.2",
 		"@radix-ui/react-slot": "^1.0.2",
 		"@radix-ui/react-switch": "^1.0.3",
+		"@radix-ui/react-tabs": "^1.1.1",
 		"@radix-ui/react-toast": "^1.1.5",
 		"@reduxjs/toolkit": "^2.2.2",
 		"@tailwindcss/typography": "^0.5.13",
@@ -26,6 +27,7 @@
 		"clsx": "^2.1.0",
 		"embla-carousel-react": "^8.0.0",
 		"framer-motion": "^11.0.24",
+		"lucide-react": "^0.460.0",
 		"mongodb": "^6.7.0",
 		"next": "14.1.3",
 		"nodemailer": "^6.9.14",
