--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-scroll-area": "^1.2.2",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slider": "^1.2.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toast": "^1.1.5",
@@ -23,11 +26,16 @@
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.0.0",
+    "fabric": "^5.5.0",
     "framer-motion": "^11.0.24",
+    "lucide-react": "^0.469.0",
+    "nanoid": "^5.0.9",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.51.1",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
@@ -37,10 +45,12 @@
     "recharts": "^2.12.3",
     "swiper": "^11.0.7",
     "tailwind-merge": "^2.2.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/fabric": "^5.3.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
