--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@reduxjs/toolkit": "^2.2.2",
+    "@tailwindcss/typography": "^0.5.15",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "daisyui": "^4.12.23",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.0.0",
     "fabric": "^5.5.0",
@@ -65,5 +67,4 @@
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
-
 }
